--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,5 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=2080
+NewWindowWidth=2660
 NewWindowHeight=1670
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -106,32 +106,34 @@ MRUItem6=/Game/Begin
 LastLevel=/Game/Map/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Player/new/newAnim/newAnim_TPC_Base.newAnim_TPC_Base
+OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player/new/SK_third_person_character_Skeleton
-MRUItem1=/Game/Player/new/PLayer
-MRUItem2=/Game/Player/SK_Mannequin_Skeleton
-MRUItem3=/Game/Sword_Animations/Demo/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem4=/Game/Enemy/EnemyGoblin/gblbp
-MRUItem5=/Game/Enemy/AI_HealthBar
-MRUItem6=/Game/Enemy/realAI/攻击
-MRUItem7=/Game/Enemy/Zombie/Zombie_BP
-MRUItem8=/Game/Enemy/realAI/Task/攻击
-MRUItem9=/Game/Enemy/realAI/NewBehaviorTree
-MRUItem10=/Game/Enemy/AI_Hit
-MRUItem11=/Game/Enemy/realAI/走向玩家
-MRUItem12=/Game/Enemy/realAI/AI_Controller
-MRUItem13=/Game/Enemy/EnemyGoblin/gblbp_Child
-MRUItem14=/Game/Enemy/Zombie/Animations/Zombie_
-MRUItem15=/Game/Enemy/Zombie/Mesh/Zombie_Skeleton
-MRUItem16=/Game/Enemy/Zombie/Animations/Anim_Hit_Montage
-MRUItem17=/Game/Enemy/Zombie/Mesh/Zombie_Skeleton_AnimBlueprint
-MRUItem18=/Game/Enemy/EnemyGoblin/gbl
-MRUItem19=/Game/Enemy/EnemyGoblin/gbl_Child
+MRUItem0=/Game/Player/new/newAnim/AimOffset/newAimOffset
+MRUItem1=/Game/Player/new/newAnim/AimOffset/newtpc_rifle_aim_center_Anim
+MRUItem2=/Game/Player/new/newAnim/AimOffset/NewAimOffsetBlendSpace1D
+MRUItem3=/Game/Player/new/PLayer
+MRUItem4=/Game/Player/new/newAnim/AimSequence/newtpc_rifle_jump_start_Anim
+MRUItem5=/Game/Player/new/newAnim/newAnim_TPC_Base
+MRUItem6=/Game/Sword_Animations/Demo/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem7=/Game/Sword_Animations/Animations/Sequence/05_Jump/01_Jump/01_Jump_0/Jump_Start_0_Seq
+MRUItem8=/Game/Sword_Animations/Animations/Sequence/05_Jump/01_Jump/01_Jump_0/Jump_Loop_0_Seq
+MRUItem9=/Game/Sword_Animations/Animations/Sequence/05_Jump/01_Jump/01_Jump_0/Jump_Stop_0_Seq
+MRUItem10=/Game/Player/new/newAnim/BlendSpace/run
+MRUItem11=/Game/Player/new/newAnim/BlendSpace/walk
+MRUItem12=/Game/Player/new/newAnim/BlendSpace/NewBlendSpace
+MRUItem13=/Game/Player/new/newAnim/BlendSpace/newTPC_Run_BlendSpace
+MRUItem14=/Game/Player/new/newAnim/BlendSpace/newTPC_Walk_BlendSpace
+MRUItem15=/Game/Sword_Animations/Animations/Sequence/01_Idle/Idle_Combat_Seq
+MRUItem16=/Game/Player/new/newAnim/newtpc_rifle_reload_out_of_ammo_Anim_Montage
+MRUItem17=/Game/Player/new/newAnim/newtpc_rifle_aim_center_Anim
+MRUItem18=/Game/Player/new/Anim_TPC_Base
+MRUItem19=/Game/Player/new/newAnim/newtpc_rifle_reload_out_of_ammo_Anim
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1681,6 +1683,17 @@ Zombie_BP_C.MovementComponent=True
 Zombie_BP_C.Shape=True
 Zombie_BP_C.Materials=True
 AI_HealthBar_C.默认=True
+newAnim_TPC_Base_C.默认=True
+newAnim_TPC_Base_C.RootMotion=True
+newAnim_TPC_Base_C.Notifies=True
+AimOffsetBlendSpace1D.InputInterpolation=True
+AimOffsetBlendSpace1D.Axis Settings=True
+AimOffsetBlendSpace1D.AdditiveSettings=True
+AimOffsetBlendSpace1D.Animation=True
+AimOffsetBlendSpace1D.SampleInterpolation=True
+AimOffsetBlendSpace1D.AnimationNotifies=True
+AimOffsetBlendSpace1D.MetaData=True
+AimOffsetBlendSpace1D.Thumbnail=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -1800,6 +1813,13 @@ AI_HealthBar_C.默认=True
 /Game/Enemy/Zombie/Mesh/Zombie_Skeleton_AnimBlueprint.Zombie_Skeleton_AnimBlueprint=0
 /Game/Enemy/realAI/Task/攻击.攻击=0
 /Game/Enemy/Zombie/Zombie_BP.Zombie_BP=1
+/Game/Player/new/newAnim/newtpc_rifle_reload_out_of_ammo_Anim_Montage.newtpc_rifle_reload_out_of_ammo_Anim_Montage=0
+/Game/Player/new/newAnim/motage/newtpc_rifle_reload_out_of_ammo_Anim_Montage.newtpc_rifle_reload_out_of_ammo_Anim_Montage=0
+/Game/Player/new/newAnim/newAnim_TPC_Base.newAnim_TPC_Base=0
+/Game/Player/new/newAnim/BlendSpace/newTPC_Run_BlendSpace.newTPC_Run_BlendSpace=0
+/Game/Player/new/newAnim/AimSequence/newtpc_rifle_walk_45_forward_right_Anim.newtpc_rifle_walk_45_forward_right_Anim=0
+/Game/Sword_Animations/Demo/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
+/Game/Sword_Animations/Animations/Sequence/09_Turn/01_Turn/Turn_180_L_Seq.Turn_180_L_Seq=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1934,19 +1954,19 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[5].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
-AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
-AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
+AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 AnimGraphNode_Base=
 K2Node=
 CapsuleComponent=
@@ -1958,7 +1978,7 @@ PLayer_C=
 Character=
 Pawn=
 Anim_TPC_Base_C=
-AnimInstance=
+AnimInstance="\"Object.Delta Time X\" "
 DragDrop_C="\"Object.被拖动的控件\" "
 DragDropOperation="\"Object.Payload\" "
 InventoryComponent_C=
@@ -1966,7 +1986,7 @@ AI_C=
 AI2_C=
 LandscapeEditorObject="\"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
 Bullet_C=
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 NewMap_C=
@@ -2007,6 +2027,9 @@ BTAuxiliaryNode=
 BTService_攻击范围_C=
 攻击_C=
 Zombie_BP_C=
+newAnim_TPC_Base_C="\"Object.Delta Time X\" "
+AnimGraphNode_SequencePlayer=
+AnimGraphNode_AssetPlayerBase=
 
 [MessageLog]
 LastLogListing=PIE
@@ -2062,7 +2085,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [RootWindow]
 ScreenPosition=X=294.500 Y=198.500
-WindowSize=X=1298.000 Y=770.000
+WindowSize=X=1303.000 Y=775.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2090,7 +2113,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Player/new/newAnim/BlendSpace
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3079,7 +3102,7 @@ TimelineEnabledSnaps=MontageSection
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 PLayer_C=
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,
 Anim_TPC_Base_C=
@@ -3119,7 +3142,7 @@ ProgressBar=
 AI_HealthBar_C=
 NewBlueprint_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,
 phy_C=
-SceneComponent=
+SceneComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
 Landscape=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 MovementComponent=
@@ -3129,8 +3152,9 @@ BTService_BlueprintBase_New_C=
 BTService_攻击范围_C=
 攻击_C=
 gblbp_Child_C=CapsuleComponent.Collision.Collision,
-Zombie_BP_C=
+Zombie_BP_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 WidgetComponent=WidgetComponent.Collision.Collision,
+newAnim_TPC_Base_C=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Enemy/EnemyGoblin/gblbp.gblbp;
