--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,5 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=2780
+NewWindowWidth=2790
 NewWindowHeight=1670
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -71,7 +71,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2780,Y=1670)
+LastSize=(X=2790,Y=1670)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-RT293EV
 LastExecutedLaunchName=DESKTOP-RT293EV
 LastExecutedPIEPreviewDevice=
@@ -1939,7 +1939,7 @@ ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Render Transform.RenderTransform\" "
-Object="\"Object.is walking\" "
+Object=
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
@@ -1983,7 +1983,7 @@ PLayer_C=
 Character=
 Pawn=
 Anim_TPC_Base_C=
-AnimInstance="\"Object.is walking\" "
+AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
 DragDropOperation="\"Object.Payload\" "
 InventoryComponent_C=
@@ -2032,7 +2032,7 @@ BTAuxiliaryNode=
 BTService_攻击范围_C=
 攻击_C=
 Zombie_BP_C=
-newAnim_TPC_Base_C="\"Object.is walking\" "
+newAnim_TPC_Base_C=
 AnimGraphNode_SequencePlayer=
 AnimGraphNode_AssetPlayerBase=
 
@@ -3118,7 +3118,7 @@ PickUpUI_C=
 InventoryComponent_C=
 DragDropOperation=
 PlayerUI_C=
-PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Normal Overrides,MaterialEditorInstanceConstant.ParameterGroups.Physical Surface,MaterialEditorInstanceConstant.ParameterGroups.Textures Overrides,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 AI_Anim_C=
 AI_C=
