--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,37 +108,39 @@ LastLevel=/Game/Map/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Player/InventorySystem/新建文件夹/E_WeaponType.E_WeaponType
+OpenAssetsAtExit=/Game/Player/InventorySystem/WeaponSystem/BP_Weapon.BP_Weapon
 OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
-OpenAssetsAtExit=/Game/Player/InventorySystem/新建文件夹/E_射击类型.E_射击类型
-OpenAssetsAtExit=/Game/Player/InventorySystem/新建文件夹/S_Weapon.S_Weapon
-OpenAssetsAtExit=/Game/Player/InventorySystem/新建文件夹/E_弹道类型.E_弹道类型
-OpenAssetsAtExit=/Game/Player/InventorySystem/新建文件夹/WeaponComponent.WeaponComponent
+OpenAssetsAtExit=/Game/Player/InventorySystem/WeaponSystem/Ammo/Ammo.Ammo
+OpenAssetsAtExit=/Game/Player/InventorySystem/WeaponSystem/Ammo/S_AmmoInfo.S_AmmoInfo
+OpenAssetsAtExit=/Game/Player/InventorySystem/WeaponSystem/S_WeaponInfo.S_WeaponInfo
+OpenAssetsAtExit=/Game/Player/InventorySystem/WeaponSystem/Ammo/AmmoType.AmmoType
+OpenAssetsAtExit=/Game/Effect/EffectActor.EffectActor
+OpenAssetsAtExit=/Game/Effect/S_EffectInfo.S_EffectInfo
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player/InventorySystem/新建文件夹/WeaponComponent
-MRUItem1=/Game/Player/InventorySystem/InventoryComponent
-MRUItem2=/Game/Player/new/PLayer
-MRUItem3=/Game/Player/InventorySystem/新建文件夹/PickUpBase_Child
-MRUItem4=/Game/Player/InventorySystem/新建文件夹/E_射击类型
-MRUItem5=/Game/Player/InventorySystem/新建文件夹/E_弹道类型
-MRUItem6=/Game/Player/InventorySystem/新建文件夹/E_Weapon
-MRUItem7=/Game/Player/InventorySystem/S_Weapon
-MRUItem8=/Game/Player/InventorySystem/WeaponComponent
-MRUItem9=/Game/Player/InventorySystem/ItemSlotUI
-MRUItem10=/Game/Player/InventorySystem/InventoryUI
-MRUItem11=/Game/Player/InventorySystem/PickUpUI
-MRUItem12=/Game/Player/InventorySystem/DragDrop
-MRUItem13=/Game/Player/InventorySystem/PickUpBase_Child
-MRUItem14=/Game/Player/new/PA_third_person_character
-MRUItem15=/Game/Map/NewMap
-MRUItem16=/Game/Player/InventorySystem/PickUpBase
-MRUItem17=/Game/Player/InventorySystem/S_Item
-MRUItem18=/Game/FPS_Weapon_Bundle/Weapons/Meshes/Ka47/SM_KA47
-MRUItem19=/Game/FPS_Weapon_Bundle/Weapons/Meshes/Ka47/SK_KA47_X_Skeleton
+MRUItem0=/Game/Effect/EffectInfo
+MRUItem1=/Game/Effect/EffectActor
+MRUItem2=/Game/Player/InventorySystem/WeaponSystem/PickUpBase_Child
+MRUItem3=/Game/Player/InventorySystem/WeaponSystem/WeaponComponent
+MRUItem4=/Game/Player/InventorySystem/WeaponSystem/Ammo/Ammo
+MRUItem5=/Game/Player/InventorySystem/新建文件夹/Ammo/AmmoInfo
+MRUItem6=/Game/Player/InventorySystem/新建文件夹/S_Weapon
+MRUItem7=/Game/Player/InventorySystem/新建文件夹/E_WeaponType
+MRUItem8=/Game/Player/InventorySystem/新建文件夹/E_射击类型
+MRUItem9=/Game/Player/InventorySystem/新建文件夹/E_弹道类型
+MRUItem10=/Game/Player/InventorySystem/新建文件夹/WeaponComponent
+MRUItem11=/Game/Player/new/PLayer
+MRUItem12=/Game/Player/InventorySystem/InventoryComponent
+MRUItem13=/Game/Player/InventorySystem/新建文件夹/PickUpBase_Child
+MRUItem14=/Game/Player/InventorySystem/新建文件夹/E_Weapon
+MRUItem15=/Game/Player/InventorySystem/S_Weapon
+MRUItem16=/Game/Player/InventorySystem/WeaponComponent
+MRUItem17=/Game/Player/InventorySystem/ItemSlotUI
+MRUItem18=/Game/Player/InventorySystem/InventoryUI
+MRUItem19=/Game/Player/InventorySystem/PickUpUI
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1739,6 +1741,56 @@ Image.Events=True
 WeaponComponent_C.默认=True
 UserDefinedEnum.Enumerators=True
 UserDefinedEnum.Description=True
+Ammo_C.Tick=True
+Ammo_C.Replication=True
+Ammo_C.Rendering=True
+Ammo_C.Collision=True
+Ammo_C.Actor=True
+Ammo_C.Input=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+NiagaraComponent.TransformCommon=True
+NiagaraComponent.Niagara=True
+NiagaraComponent.NiagaraComponent_Parameters=True
+NiagaraComponent.Activation=True
+NiagaraComponent.Lighting=True
+NiagaraComponent.Attachment=True
+NiagaraComponent.Randomness=True
+NiagaraComponent.Parameters=True
+NiagaraComponent.Compilation=True
+NiagaraComponent.Rendering=True
+NiagaraComponent.Navigation=True
+NiagaraComponent.Tags=True
+NiagaraComponent.ComponentReplication=True
+NiagaraComponent.Variable=True
+NiagaraComponent.Cooking=True
+BP_Weapon_C.Tick=True
+BP_Weapon_C.默认=True
+BP_Weapon_C.Replication=True
+BP_Weapon_C.Rendering=True
+BP_Weapon_C.Collision=True
+BP_Weapon_C.Actor=True
+BP_Weapon_C.Input=True
+EffectActor_C.Tick=True
+EffectActor_C.Replication=True
+EffectActor_C.Rendering=True
+EffectActor_C.Collision=True
+EffectActor_C.Actor=True
+EffectActor_C.Input=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -1882,6 +1934,13 @@ UserDefinedEnum.Description=True
 /Game/Player/InventorySystem/InventoryComponent.InventoryComponent=0
 /Game/Player/InventorySystem/ItemSlotUI.ItemSlotUI=0
 /Game/Player/InventorySystem/新建文件夹/PickUpBase_Child.PickUpBase_Child=0
+/Game/Player/InventorySystem/新建文件夹/E_WeaponType.E_WeaponType=0
+/Game/Player/InventorySystem/新建文件夹/E_射击类型.E_射击类型=0
+/Game/Player/InventorySystem/新建文件夹/S_Weapon.S_Weapon=1
+/Game/Player/InventorySystem/新建文件夹/E_弹道类型.E_弹道类型=0
+/Game/Player/InventorySystem/新建文件夹/WeaponComponent.WeaponComponent=1
+/Game/Player/InventorySystem/新建文件夹/Ammo/AmmoInfo.AmmoInfo=0
+/Game/Player/InventorySystem/WeaponSystem/WeaponComponent.WeaponComponent=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2032,7 +2091,7 @@ AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settin
 AnimGraphNode_Base=
 K2Node=
 CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
@@ -2049,7 +2108,7 @@ AI2_C=
 LandscapeEditorObject="\"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
 Bullet_C=
 StaticMeshComponent=
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 NewMap_C=
 LevelScriptActor=
@@ -2092,12 +2151,15 @@ Zombie_BP_C=
 newAnim_TPC_Base_C=
 AnimGraphNode_SequencePlayer=
 AnimGraphNode_AssetPlayerBase=
-PickUpBase_C="\"Object.默认.ItemInfo\" "
+PickUpBase_C="\"Object.默认.WeaponInfo\" \"Object.默认.ItemInfo\" "
 Image="\"Object.Render Transform.RenderTransform\" "
 PickUpBase_Child_C="\"Object.默认.ItemInfo\" "
+Ammo_C=
+BP_Weapon_C="\"Object.默认.WeaponInfo\" \"Object.默认.ItemInfo\" "
+EffectActor_C="\"Object.EffectInfo\" "
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=LoadErrors
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2151,7 +2213,7 @@ CameraSpeed=2
 
 [RootWindow]
 ScreenPosition=X=294.500 Y=198.500
-WindowSize=X=1318.000 Y=790.000
+WindowSize=X=1323.000 Y=795.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2179,7 +2241,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/MilitaryWeapSilver
+ContentBrowserTab1.SelectedPaths=/Game/Effect
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3168,9 +3230,9 @@ TimelineEnabledSnaps=MontageSection
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 PLayer_C=
-K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 Anim_TPC_Base_C=
 DragDrop_C=
 InventoryUI_C=
@@ -3179,7 +3241,7 @@ PickUpUI_C=
 InventoryComponent_C=
 DragDropOperation=
 PlayerUI_C=
-PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Normal Overrides,MaterialEditorInstanceConstant.ParameterGroups.Physical Surface,MaterialEditorInstanceConstant.ParameterGroups.Textures Overrides,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 AI_Anim_C=
 AI_C=
@@ -3301,6 +3363,10 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.fire,
 PickUpBase_Child_C=StaticMeshComponent.Collision.Collision,
 PickUpBase_C=StaticMeshComponent.Collision.Collision,
+Ammo_C=
+ProjectileMovementComponent=
+BP_Weapon_C=
+EffectActor_C=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Player/InventorySystem/新建文件夹/PickUpBase_Child.PickUpBase_Child;
@@ -3485,4 +3551,12 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
+
+[FEditorModeTools]
+CoordSystem=1
+
+[PathColor]
+/Game/Effect=(R=0.500000,G=0.000000,B=0.092491,A=1.000000)
+/Game/Player=(R=0.000000,G=0.300946,B=0.500000,A=1.000000)
+/Game/Enemy=(R=0.260417,G=0.008746,B=0.000000,A=1.000000)
 
